# temple

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily-plan.yml
config/: micronutrients.json  nutrition.json  profile.json  training.json
data/menus/: 2026-06-10.json  2026-06-11.json  2026-06-12.json
data/plans/: 2026-06-10.md  2026-06-11-visible-curated.md  2026-06-11.md  2026-06-12.md
src/fitness_os/: __init__.py  checkin.py  cli.py  config.py  emailer.py  menu.py  micronutrients.py  nutrition.py  render.py  training.py
