[project]
name = "fitness-os"
version = "0.1.0"
description = "Daily training and nutrition planner for lean mass gain."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
fitness-os = "fitness_os.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

